Opened 11 years ago

Closed 7 years ago

#10919 closed bug (fixed)

ifconfig del KDLs reproducibly

Reported by: jackburton Owned by: axeld
Priority: normal Milestone: R1
Component: Network & Internet/Stack Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #10930, #12561
Platform: All

Description

Doing an "ifconfig del /dev/net/<anydriver>/<anyinterface> KDLs horribly. I didn't post the KDL output because it's reproducible everytime. Will do if requested, though.

Change History (23)

comment:1 by anevilyak, 11 years ago

That doesn't seem like a good reason to omit the output. That makes the assumption that it isn't something about your configuration that makes it reliably reproducible, and further, if nothing else, it would be nice to save the person who winds up looking into it the time of having to reproduce it just to find out where to start looking.

comment:2 by jackburton, 11 years ago

Indeed. Will take a picture next time, then.

comment:3 by diver, 11 years ago

#7039/#7042 may be related.

Last edited 11 years ago by diver (previous) (diff)

comment:4 by jackburton, 11 years ago

Yeah, the crash I got it's exactly the one in #7042, comment 1. Shall we mark this as duplicated of #7042 and change its summary ? (since you just have to delete the interface ONCE to trigger it).

comment:5 by diver, 11 years ago

I think we should leave this one open since the back trace in #7042 is different from #7042 comment 1.

by jackburton, 11 years ago

Attachment: 2014-06-09 21.40.30.jpg added

KDL shot

comment:6 by jackburton, 11 years ago

More information: I cannot reproduce it within VirtualBox. It's 100% reproducible on my laptop.

comment:7 by diver, 11 years ago

Reproducible in vbox here with ipro1000 driver.

comment:8 by jackburton, 10 years ago

Diver, could you try again ? Since I update my Haiku install lately, I cannot reproduce it anymore on real hardware, either.

comment:9 by vidrep, 10 years ago

Hrev48254 gcc4 Running this command causes KDL: ifconfig del /dev/net/ipro1000/0 ; ifconfig /dev/net/ipro1000/0 up This is on real hardware. I'll attach a listdev and photo of KDL shortly. Would a serial debug log be useful?

Last edited 10 years ago by vidrep (previous) (diff)

by vidrep, 10 years ago

Attachment: listdev_dc7900 added

by vidrep, 10 years ago

Attachment: IMG_0185.JPG added

comment:10 by jackburton, 10 years ago

I still can't reproduce this, on a current revision, on VirtualBox. I can't test on real hardware anymore, though. Can you still reproduce it, diver ?

comment:11 by diver, 10 years ago

I can still reproduce it in hrev49530 with VirtualBox 4.1.28 with NAT mode by running a few pings while deleting an interface.

comment:12 by jackburton, 10 years ago

Interesting, I will try.

comment:13 by jackburton, 10 years ago

Nope, still can't reproduce. It's either timing dependent, or... don't know.

comment:14 by diver, 10 years ago

Try to start pinging or create some network activity in some other way and also while : ; do ifconfig del /dev/net/ipro1000/0 ; ifconfig /dev/net/ipro1000/0 up ; done

comment:15 by diver, 7 years ago

Blocking: 10930 added

comment:16 by diver, 7 years ago

Blocking: 12561 added

comment:17 by waddlesplash, 7 years ago

The NetworkInterfaceTest in the test suite reproduces this also.

comment:18 by jackburton, 7 years ago

I added a tentative fix in gerrit. Change 469. With "tentative" I just mean it needs to be reviewed to be sure it doesn't cause other problems. But it definitely fixes this problem.

Last edited 7 years ago by jackburton (previous) (diff)

comment:19 by jackburton, 7 years ago

Axel, could you review the change ? Since you are one of the main contributors of this part of the code, I guess you can tell if it's okay or not.

comment:20 by jackburton, 7 years ago

Resolution: fixed
Status: newclosed

Applied in hrev52267

Note: See TracTickets for help on using tickets.